--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -6,11 +6,13 @@ output: github_document
 ---
 ```{r}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 ## Data wrangling
 
 ### import datasets
-import 'FAS_litters.csv' using relative path
+#### import 'FAS_litters.csv' using relative path
 ```{r, warning=FALSE}
 litters_df = 
   read_csv("DATA/FAS_litters.csv")
@@ -19,11 +21,66 @@ litters_df =
 litters_df
 ```
 
-import 'FAS_litters.csv' using absolute path
+#### import 'FAS_litters.csv' using absolute path
 ```{r, warning=FALSE}
 litters_df_abs = 
   read_csv('/Users/daviddu/Desktop/P8105_DS/0919lec/data_wrangling/DATA/FAS_litters.csv')
 litters_df_abs = 
   janitor::clean_names(litters_df_abs)
 
+```
+
+#### import 'FAS_pups.csv'
+```{r, warning=FALSE}
+pups_df = 
+  read_csv('DATA/FAS_pups.csv')
+pups_df = 
+  janitor::clean_names(pups_df)
+```
+#### data summaray
+```{r}
+str(litters_df)
+
+```
+```{r}
+skimr::skim(litters_df)
+```
+
+#### options in `read_*`
+
+skip and default col_names
+```{r}
+litters_df = 
+  read_csv("DATA/FAS_litters.csv",
+           skip = 10, col_names = FALSE)
+```
+
+treat arbitary values in the import file as NA values
+```{r}
+litters_df = 
+  read_csv("DATA/FAS_litters.csv", 
+           na = c("NA", 19))
+```
+
+col_types
+```{r}
+litters_df = 
+  read_csv("DATA/FAS_litters.csv", 
+           col_types = 
+             cols(
+               `GD0 weight` = col_double()
+               ))
+```
+
+
+#### Import a xslx file
+```{r}
+mlb_df = read_excel('DATA/mlb11.xlsx')
+```
+
+
+#### Import a SAS file
+```{r}
+pulse_df = 
+  read_sas('DATA/public_pulse_data.sas7bdat')
 ```
