--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -84,3 +84,14 @@ mlb_df = read_excel('DATA/mlb11.xlsx')
 pulse_df = 
   read_sas('DATA/public_pulse_data.sas7bdat')
 ```
+
+
+#### exporting data
+imagine we already cleaned the data
+```{r}
+litters_df = 
+  read_csv("DATA/FAS_litters.csv")
+litters_df_cleaned = 
+  janitor::clean_names(litters_df)
+write_csv(litters_df_cleaned, "DATA/litters_cleaned.csv")
+```
